force-app/main/default/objects/Program_Engagement__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>