force-app/main/default/objects/Program_Engagement__c/fields/Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Name__c</fullName>
    <formula>Child__r.FirstName + &apos; &apos; + Child__r.LastName</formula>
    <label>Child Name</label>
    <type>Text</type>
</CustomField>