force-app/main/default/objects/Program_Engagement__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>