force-app/main/default/objects/Program_Engagement__c/fields/Engagements_Belong_to_My_Account__c.field-meta.xml
<CustomField>
    <fullName>Engagements_Belong_to_My_Account__c</fullName>
    <formula>$User.Account_Id__c =   CASESAFEID(Child__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagements Belong to My Account</label>
    <type>Checkbox</type>
</CustomField>