force-app/main/default/objects/Program_Engagement__c/fields/My_Program_Engagements__c.field-meta.xml
<CustomField>
    <fullName>My_Program_Engagements__c</fullName>
    <formula>Contact__r.Id =  $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Program Engagements</label>
    <type>Checkbox</type>
</CustomField>