force-app/main/default/objects/Program_Engagement__c/fields/Parent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>