force-app/main/default/objects/Program_Engagement__c/fields/Preferred_Station_Selections_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Station_Selections_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Station Selections Submitted</label>
    <type>Checkbox</type>
</CustomField>