force-app/main/default/objects/Program_Engagement__c/fields/Program_Engagement_Details__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement_Details__c</fullName>
    <description>Used as the label for program engagements in several parent portal flows</description>
    <formula>&quot;Child Name&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Engagement Details</label>
    <type>Text</type>
</CustomField>