force-app/main/default/objects/Program_Engagement__c/fields/Program_Session__c.field-meta.xml
<CustomField>
    <fullName>Program_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Session</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_Session__c.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.CircEsteem_Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Session__c</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>