force-app/main/default/objects/Program_Engagement__c/validationRules/Paid_Program_Payment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Program_Payment_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Program_Session__r.Program__r.Price__c &gt; 0,
    ISBLANK(TEXT(Payment_Status__c))
)</errorConditionFormula>
    <errorMessage>Payment status is required for a paid program</errorMessage>
</ValidationRule>