force-app/main/default/objects/Program_Engagement__c/listViews/My_Active_Program_Engagements.listView-meta.xml
<ListView>
    <fullName>My_Active_Program_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Child__c</columns>
    <columns>Program_Session__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagements_Belong_to_My_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Active Program Engagements</label>
</ListView>