force-app/main/default/objects/Program_Engagement__c/listViews/My_Program_Engagement.listView-meta.xml
<ListView>
    <fullName>My_Program_Engagement</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Program_Engagements__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Program Engagements</label>
</ListView>